cmake_minimum_required(VERSION 3.5)
project(enclave_demo)

function(add_gaps_target TGT SRC)
    SET(BUILD_FLAGS "-Werror" "-Wall" "-Wextra" "-Wpedantic" "-O3" "-ffunction-sections" "-fdata-sections" "--target=x86_64-pc-linux-elf")
    add_executable(${TGT} ${SRC})
    target_compile_options(${TGT} PRIVATE ${BUILD_FLAGS})
    set_target_properties(${TGT} PROPERTIES LINK_FLAGS "${LINK_FLAGS} -Wl,-enclave,${TGT} -fuse-ld=lld")
endfunction()

if(GAPS_DISABLE)
    message(STATUS "GAPS clang not present")
else()
    SET(ENCLAVE_SOURCES "enclave.c")
    add_gaps_target("alpha" ${ENCLAVE_SOURCES})
    add_gaps_target("beta" ${ENCLAVE_SOURCES})
    add_gaps_target("gamma" ${ENCLAVE_SOURCES})
endif()
